# PiccuEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Descent3.sln  README.md  vcpkg.json
2dlib/: font.cpp  hardsurf.cpp  lib2d.h  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
AudioEncode/: CMakeLists.txt  encoder.cpp
Descent3/: AIGoal.cpp  AIGoal.h  AIMain.h  AImain.cpp  BOA.cpp  BOA.h  Briefing.cpp  Briefing.h  BriefingParse.cpp  BriefingParse.h  CMakeLists.txt  ConfigItem.cpp  ConfigItem.h  Controls.cpp  CtlCfgElem.cpp  CtlCfgElem.h  D3ForceFeedback.cpp  D3ForceFeedback.h  DeathInfo.h  Descent3.manifest  DllWrappers.cpp  DllWrappers.h  Game2DLL.cpp  GameCheat.cpp  GameLoop.cpp  Inventory.cpp  Inventory.h  LoadLevel.cpp  LoadLevel.h  Mission.cpp  Mission.h  NewPyroGauges.cpp  NewPyroGauges.h  ObjInit.cpp  ObjScript.cpp  ObjScript.h  OsirisLoadandBind.cpp  PilotPicsAPI.cpp  PilotPicsAPI.h  Player.cpp  (+249 more)
acmlib/: acmlib.cpp
bitmap/: CMakeLists.txt  bitmain.cpp  bumpmap.cpp  iff.cpp  iff.h  lightmap.cpp  pcx.cpp  tga.cpp
cfile/: CFILE.cpp  CMakeLists.txt  InfFile.cpp  hog.cpp
czip/: BitIO.cpp  CZip.cpp  HuffmanAdapt.cpp  HuffmanBasic.cpp
d3music/: CMakeLists.txt  musicapi.cpp
dd_grwin32/: CMakeLists.txt  ddgrWin32.h  ddgrWin32API.cpp  ddgrWin32DX.cpp  ddgrWin32DX.h  ddgrWin32GDI.cpp  ddgrWin32GDI.h  ddgrWin32Init.cpp
dd_lnxsound/: CMakeLists.txt  ddlnxsound.h  lnxsound.cpp  mixer.cpp  sdlsound.cpp
dd_sndlib/: CMakeLists.txt  Ds3dlib.cpp  Ia3dutil.h  auddev.h  aureal3d.cpp  ddsoundload.cpp  ds3dlib_internal.h  dsound3d.cpp  eax.cpp  eax.h  eax2.h  geometry.cpp  ia3dapi.h  llsopenal.cpp  ssl_lib.cpp  vmanpset.h
dd_vidwin32/: CMakeLists.txt  ddvidlib.h  vidWin32FS.cpp  vidWin32Win.cpp  video_win32.cpp
ddgr_mac/: ddgr_mac.cpp  ddgr_mac.h  macOSSurface.cpp  macOSSurface.h
ddio_common/: CMakeLists.txt  ddio.cpp  key.cpp  timer.cpp
ddio_lnx/: CMakeLists.txt  ddio_lnx.h  lnxcdrom.cpp  lnxfile.cpp  lnxforcefeedback.cpp  lnxio.cpp  lnxjoy.cpp  lnxkey.cpp  lnxkey_ggi.cpp  lnxkey_null.cpp  lnxkey_raw.cpp  lnxkey_sdl.cpp  lnxkey_svga.cpp  lnxkey_xwin.cpp  lnxmouse.cpp  lnxtimer.cpp  sdljoy.cpp
ddio_mac/: ddio_mac.h  macController.cpp  macController.h  macfile.cpp  macio.cpp  macjoy.cpp  mackey.cpp  macmouse.cpp  mactimer.cpp
ddio_sdl/: CMakeLists.txt  sdlfile.cpp  sdlio.cpp  sdljoy.cpp  sdlkey.cpp  sdlmouse.cpp
ddio_win/: CMakeLists.txt  ddio_win.h  serial.cpp  winfile.cpp  winforcefeedback.cpp  winio.cpp  winjoy.cpp  winkey.cpp  winmouse.cpp  wintimer.cpp
ddvid_lnx/: CMakeLists.txt  video_lnx.cpp
docs/: readme.md
editor/: DallasImportDlg.cpp  DallasImportDlg.h  DallasSoundDlg.cpp  DallasSoundDlg.h  DallasStrmAudioDlg.cpp  DallasStrmAudioDlg.h  DallasUserTypesDlg.cpp  DallasUserTypesDlg.h  DallasVectorPromptDialog.cpp  DallasVectorPromptDialog.h  EPath.cpp  EPath.h  Erooms.cpp  Erooms.h  Group.cpp  HRoom.cpp  HRoom.h  HTexture.cpp  HTexture.h  HView.h  ObjMoveManager.h  ObjectListCombo.cpp  ObjectListCombo.h  RoomListCombo.cpp  RoomListCombo.h  RoomUVs.cpp  RoomUVs.h  SelManager.cpp  SelManager.h  SoundListCombo.cpp  SoundListCombo.h  TriggerListCombo.cpp  TriggerListCombo.h  d3edit.h  dallasflagdlg.cpp  dallasflagdlg.h  dallasgenericpromptdlg.cpp  dallasgenericpromptdlg.h  dallasmaindlg.cpp  dallasmaindlg.h  (+16 more)
fix/: CMakeLists.txt  fix.cpp
grtext/: CMakeLists.txt  grfont.cpp  grtext.cpp  grtextlib.h  textaux.cpp
hogfiles/: CMakeLists.txt
lib/: 3d.h  Adecode.h  Aencode.h  AppConsole.h  BYTESWAP.H  CFILE.H  CZip.h  Controller.h  DDAccess.h  Ddgr.h  IMeshBuilder.h  IMeshHandle.h  InfFile.h  Macros.h  PHYSICS.H  TaskSystem.h  appdatabase.h  application.h  audio_encode.h  bitmap.h  bumpmap.h  collide.h  d3events.h  d3music.h  d3x_op.h  ddio.h  ddio_common.h  ddsndgeometry.h  ddvid.h  debug.h  dedicated_server.h  demofile.h  directplay.h  ds3dlib.h  enginebrand.h  findintersection.h  findintersection_external.h  fix.h  forcefeedback.h  game2dll.h  (+48 more)
libacm/: CMakeLists.txt  adecode.cpp  aencode.cpp  decode.c  libacm.h  libacm.vcxproj  libacm.vcxproj.filters
linux/: CMakeLists.txt  lnxcon.cpp  lnxcon_null.cpp  lnxcon_raw.cpp
lnxcontroller/: lnxcontroller.cpp
mac/: DrawSprocket.cpp  IO.H  InSprocket.h  InSprocketResource.h  MACAPP.CPP  MACAPP.H  MACCON.CPP  MACDATA.CPP  MACDATABASE.H  MACFORCEFEEDBACK.CPP  MACFUNCS.CPP  MACGAMESPY.CPP  MACHEADERSD3.H  MACINETFILE.CPP  MACNETWORKING.CPP  MACONLY.CPP  MACONLY.H  MACREGISTRY.CPP  MACREGISTRY.H  MACSNDCONVERT.CPP  MACSOUND.CPP  MACSOUND.H  MACSTREAMAUDIO.CPP  MACTASK.CPP  MAC_GLIDE_DEBUG.H  MAC_GLIDE_RELEASE.H  MAC_LLSOUND.CPP  MAC_OPENGL_DEBUG.H  MAC_OPENGL_REL.H  MacDisplays.h  MacMovie.cpp  SNDSPROCKET.CPP  SYSSTAT.H  maccore.cpp  macdatabase.cpp  macdebug.cpp
mac_sndlib/: mac_llsound.cpp
manage/: CMakeLists.txt  doorpage.cpp  doorpage.h  gamefilepage.cpp  gamefilepage.h  generic.cpp  genericpage.h  manage.cpp  megapage.cpp  megapage.h  pagelock.cpp  powerpage.h  robotpage.h  shippage.cpp  shippage.h  soundpage.cpp  soundpage.h  texpage.cpp  texpage.h  weaponpage.cpp  weaponpage.h
md5/: CMakeLists.txt
netcon/lanclient/: CMakeLists.txt  lanclient.cpp  lanclient.h
netgames/dmfc/: CMakeLists.txt  dmfcbase.cpp  dmfccfg.cpp  dmfcclient.cpp  dmfcdllinit.h  dmfcfunctions.cpp  dmfchudmessages.cpp  dmfcinputcommand.cpp  dmfcinputcommands.h  dmfcinterface.cpp  dmfcinternal.h  dmfcmenu.cpp  dmfcpackets.cpp  dmfcpinfo.cpp  dmfcprecord.cpp  dmfcpstack.cpp  dmfcremote.cpp  dmfcserver.cpp  dmfcstats.cpp  dmfctimer.cpp  dmfcui.cpp  dmfcvirtual.cpp  encryption.cpp  encryption.h  idmfc.cpp
renderer/: CMakeLists.txt  HardwareInternal.h  HardwareOpenGL.cpp  IRenderer.h  clipper.cpp  draw.cpp  dyna_gl.h  dyna_gl_ryan.h  gl.c  gl1_draw.cpp  gl1_image.cpp  gl1_init.cpp  gl1_local.h  gl1_main.cpp  gl_draw.cpp  gl_framebuffer.cpp  gl_image.cpp  gl_init.cpp  gl_local.h  gl_main.cpp  gl_mesh.cpp  gl_mesh.h  gl_shader.cpp  gl_shader.h  gl_shadersource.cpp  gl_shared.h  globalvars.cpp  instance.cpp  lnxscreenmode.cpp  opengl.cpp  opengl_ryan.cpp  points.cpp  renderer.cpp  setup.cpp  transforms.cpp
(+429 files in other folders)
